syntax = "proto3";
package cedar_symcc;
import "core.proto";
import "validator.proto";

message Policy {
    cedar_policy_core.TemplateBody template = 1;
    cedar_policy_core.Policy policy = 2;
}

// Authorization / Evaluation Specific Messages
message AuthorizationRequest {
    cedar_policy_core.Request request = 1;
    cedar_policy_core.PolicySet policies = 2;
    cedar_policy_core.Entities entities = 3;
}

message EvaluationRequest {
    cedar_policy_core.Expr expr = 1;
    cedar_policy_core.Request request = 2;
    cedar_policy_core.Entities entities = 3;
}

message EvaluationRequestChecked {
    cedar_policy_core.Expr expr = 1;
    cedar_policy_core.Request request = 2;
    cedar_policy_core.Entities entities = 3;
    cedar_policy_core.Expr expected = 4;
}

// Validation Specific Messages
message EntityValidationRequest {
    cedar_policy_validator.Schema schema = 1;
    cedar_policy_core.Entities entities = 2;
}

message RequestValidationRequest {
    cedar_policy_validator.Schema schema = 1;
    cedar_policy_core.Request request = 2;
}

message ValidationRequest {
    cedar_policy_validator.Schema schema = 1;
    cedar_policy_core.PolicySet policies = 2;
    cedar_policy_validator.ValidationMode mode = 3;
}

message LevelValidationRequest {
    cedar_policy_validator.Schema schema = 1;
    cedar_policy_core.PolicySet policies = 2;
    int32 level = 3;
}

// SymCC Specific Messages
message RequestEnv {
    cedar_policy_core.Name principal = 1;
    cedar_policy_core.EntityUid action = 2;
    cedar_policy_core.Name resource = 3;
}

message CheckPolicyRequest {
    Policy policy = 1;
    cedar_policy_validator.Schema schema = 2;
    RequestEnv request = 3;
}

message CheckPolicySetRequest {
    cedar_policy_core.PolicySet policySet = 1;
    cedar_policy_validator.Schema schema = 2;
    RequestEnv request = 3;
}

message ComparePolicySetsRequest {
    cedar_policy_core.PolicySet srcPolicySet = 1;
    cedar_policy_core.PolicySet tgtPolicySet = 2;
    cedar_policy_validator.Schema schema = 3;
    RequestEnv request = 4;
}